bindings/c/emergence.h

/* Emergence Engine C API. Generated by `cargo xtask bindings`; do not edit. */

#ifndef EMERGENCE_H
#define EMERGENCE_H

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>

// Version of the C ABI. Bump whenever an exported signature or type layout changes.
#define EMERGENCE_ABI_VERSION 1

// Result of a fallible call. Always 32 bits wide, whatever the host compiler does with enums.
enum EmergenceStatus
#if defined(__cplusplus) || __STDC_VERSION__ >= 202311L
  : uint32_t
#endif // defined(__cplusplus) || __STDC_VERSION__ >= 202311L
 {
  // The call succeeded.
  EMERGENCE_STATUS_OK = 0,
  // A required pointer argument was null.
  EMERGENCE_STATUS_NULL_POINTER = 1,
  // The library hit an internal error. The object involved should be destroyed.
  EMERGENCE_STATUS_PANIC = 2,
};
#ifndef __cplusplus
#if __STDC_VERSION__ >= 202311L
typedef enum EmergenceStatus EmergenceStatus;
#else
typedef uint32_t EmergenceStatus;
#endif // __STDC_VERSION__ >= 202311L
#endif // __cplusplus

// Opaque handle to a simulation world.
typedef struct EmergenceWorld EmergenceWorld;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

// Returns the ABI version this library was built with.
uint32_t emergence_abi_version(void);

// Returns the library version as a static, NUL-terminated UTF-8 string. Do not free it.
const char *emergence_version(void);

// Creates a new world and writes its handle to `out_world`.
//
// Destroy it with [`emergence_world_destroy`].
//
// # Safety
//
// `out_world` must be null or valid for a pointer-sized write.
EmergenceStatus emergence_world_create(struct EmergenceWorld **out_world);

// Destroys a world. Passing null is a no-op.
//
// # Safety
//
// `world` must be null or a handle from [`emergence_world_create`] that has not already been
// destroyed. The handle must not be used afterwards.
void emergence_world_destroy(struct EmergenceWorld *world);

// Advances the world by one tick.
//
// # Safety
//
// `world` must be null or a live handle from [`emergence_world_create`], not in use on
// another thread.
EmergenceStatus emergence_world_tick(struct EmergenceWorld *world);

// Writes the number of ticks the world has run to `out_count`.
//
// # Safety
//
// `world` must be null or a live handle from [`emergence_world_create`]. `out_count` must be
// null or valid for a `u64` write.
EmergenceStatus emergence_world_tick_count(const struct EmergenceWorld *world, uint64_t *out_count);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* EMERGENCE_H */