bindings/unity/Runtime/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace Emergence.Native
{
    internal static unsafe partial class NativeMethods
    {
#if UNITY_IOS && !UNITY_EDITOR
        const string __DllName = "__Internal";
#else
        const string __DllName = "emergence";
#endif
        

        /// <summary>
        ///  Version of the C ABI. Bump whenever an exported signature or type layout changes.
        /// </summary>
        internal const uint EMERGENCE_ABI_VERSION = 1;




        /// <summary>
        ///  Returns the ABI version this library was built with.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "emergence_abi_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint emergence_abi_version();

        /// <summary>
        ///  Returns the library version as a static, NUL-terminated UTF-8 string. Do not free it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "emergence_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* emergence_version();

        /// <summary>
        ///  Creates a new world and writes its handle to `out_world`.
        ///
        ///  Destroy it with [`emergence_world_destroy`].
        ///
        ///  # Safety
        ///
        ///  `out_world` must be null or valid for a pointer-sized write.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "emergence_world_create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern EmergenceStatus emergence_world_create(EmergenceWorld** out_world);

        /// <summary>
        ///  Destroys a world. Passing null is a no-op.
        ///
        ///  # Safety
        ///
        ///  `world` must be null or a handle from [`emergence_world_create`] that has not already been
        ///  destroyed. The handle must not be used afterwards.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "emergence_world_destroy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void emergence_world_destroy(EmergenceWorld* world);

        /// <summary>
        ///  Advances the world by one tick.
        ///
        ///  # Safety
        ///
        ///  `world` must be null or a live handle from [`emergence_world_create`], not in use on
        ///  another thread.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "emergence_world_tick", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern EmergenceStatus emergence_world_tick(EmergenceWorld* world);

        /// <summary>
        ///  Writes the number of ticks the world has run to `out_count`.
        ///
        ///  # Safety
        ///
        ///  `world` must be null or a live handle from [`emergence_world_create`]. `out_count` must be
        ///  null or valid for a `u64` write.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "emergence_world_tick_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern EmergenceStatus emergence_world_tick_count(EmergenceWorld* world, ulong* out_count);


    }

    /// <summary>
    ///  Opaque handle to a simulation world.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct EmergenceWorld
    {
    }


    /// <summary>
    ///  Result of a fallible call. Always 32 bits wide, whatever the host compiler does with enums.
    /// </summary>
    internal enum EmergenceStatus : uint
    {
        /// <summary>
        ///  The call succeeded.
        /// </summary>
        Ok = 0,
        /// <summary>
        ///  A required pointer argument was null.
        /// </summary>
        NullPointer = 1,
        /// <summary>
        ///  The library hit an internal error. The object involved should be destroyed.
        /// </summary>
        Panic = 2,
    }


}
